--- a/fyp_ifa/package.json
+++ b/fyp_ifa/package.json
@@ -12,12 +12,14 @@
     "apexcharts": "^3.37.1",
     "axios": "^1.3.4",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^4.3.0",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "sweetalert2": "^11.7.5"
+    "sweetalert2": "^11.4.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
