--- a/fyp_ifa/package.json
+++ b/fyp_ifa/package.json
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "^11.4.8"
   },
   "devDependencies": {
