--- a/fyp_ifa/package.json
+++ b/fyp_ifa/package.json
@@ -13,11 +13,12 @@
     "axios": "^1.3.4",
     "bootstrap-icons": "^1.10.3",
     "chart.js": "^4.3.0",
-    "firebase": "^9.17.2",
+    "firebase": "^9.23.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.4.8"
