--- a/fyp_ifa/package.json
+++ b/fyp_ifa/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "apexcharts": "^3.37.1",
     "axios": "^1.3.4",
+    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.3",
     "chart.js": "^4.3.0",
     "firebase": "^9.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.4.8"
   },
